# ros_speech_to_text

speech_to_text_msgs/: CMakeLists.txt  package.xml
speech_to_text_msgs/msg/: Transcript.msg
watson_speech_to_text/: CMakeLists.txt  README.md  credentials.json.example  package.xml
watson_speech_to_text/launch/: mic.launch
watson_speech_to_text/scripts/: realtime.py  synchronous.py
