<?xml version="1.0"?>
<package format="2">
  <name>speech_to_text_msgs</name>
  <version>0.0.0</version>
  <description>Messages for transmitting speech-to-text results</description>

  <maintainer email="sean@hackett.pw">Sean Hackett</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
